- Updated - inputs/group constructor - add label, messages etc
- Updated - inputs/checkbox exclusive option to act as a radio (used in CF7 plugin)
- Updated - inputs/toggle background style vars to theme.json
- Updated - inputs/range match background color from inputs vars
- Updated - inputs specific variables moved to own classes (.form-check,.form-switch,.form-select)
- Fixed - core/navigation-link and core/navigation-submenu dropdown classes logic (due to issues or removal of isTopLevelLink - we dont relly on it anymore)

v6.1.8
- Updated - restored .wp-block-columns.grid default gap
- Updated - toast component style to use WP theme.json variables
- Fixed - offcanvas visibility styles
- Added - e-commerce and wide-blocks tags for WP.Org

v6.1.7
- Removed - gap-# utility class (replaced previously with g-#)
- Updated - core/comments-title top margin to zero (after removing certain CSS reboot)
- Updated - core/navigation-submenu and core/page-list to use new Dropdowns component styles
- Updated - core/navigation toggler padding to 0 and SVG color to full black
- Updated - offcanvas/modal views to load their Components styles (along with scripts)
- Updated - disable notifications for CF7 and WooCommerce if plugins already installed
- Updated - expose Dropdown/Modal/Offcanvas modules to wecodeart object (wecodeart.plugins = {...})
- Updated - utilities and components styles to use Asset trait to generate handle based on class (wecodeart-support-styles-utilities)
- Updated - move forms.js (wecodeart-support-markup-inputs) JavaScript to inline generated
- Updated - improve inputs styles with :where() and :is() selector to reduce ammount of CSS
- Updated - move input-group styles to its own component to reduce the loaded CSS for forms
- Updated - move transitions styles to its own component to reduce the default loaded CSS (dependency for Offcanvas, Modal, Toast components)
- Updated - forms validation styles now extends .wp-cf7-invalid-tip class (styled as a tooltip)